<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BreedInfoActivity">

    <ImageButton
        android:id="@+id/btnBreedInfoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_arrow_description"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivBreedImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/breed_image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        app:shapeAppearanceOverlay="@style/roundedImageView"/>

    <TextView
        android:id="@+id/tvBreedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:maxWidth="230dp"
        android:text="@string/breed_info_text_name"
        app:layout_constraintStart_toStartOf="@+id/ivBreedImage"
        app:layout_constraintTop_toBottomOf="@+id/ivBreedImage" />

    <TextView
        android:id="@+id/tvBreedGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="230dp"
        android:text="@string/breed_info_text_breed_group"
        app:layout_constraintStart_toStartOf="@+id/ivBreedImage"
        app:layout_constraintTop_toBottomOf="@+id/tvBreedName" />

    <TextView
        android:id="@+id/tvBreedTemperament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="230dp"
        android:text="@string/breed_info_text_temperament"
        app:layout_constraintStart_toStartOf="@+id/ivBreedImage"
        app:layout_constraintTop_toBottomOf="@+id/tvBreedGroup" />

    <TextView
        android:id="@+id/tvBreedBredFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="230dp"
        android:text="@string/breed_info_text_bred_for"
        app:layout_constraintStart_toStartOf="@+id/ivBreedImage"
        app:layout_constraintTop_toBottomOf="@+id/tvBreedTemperament" />

    <TextView
        android:id="@+id/tvBreedOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="230dp"
        android:text="@string/breed_info_text_origin"
        app:layout_constraintStart_toStartOf="@+id/ivBreedImage"
        app:layout_constraintTop_toBottomOf="@+id/tvBreedBredFor" />

    <TextView
        android:id="@+id/tvBreedLifSpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="230dp"
        android:text="@string/breed_info_text_life_span"
        app:layout_constraintStart_toStartOf="@+id/ivBreedImage"
        app:layout_constraintTop_toBottomOf="@+id/tvBreedOrigin" />

    <TextView
        android:id="@+id/tvBreedHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="230dp"
        android:text="@string/breed_info_text_height"
        app:layout_constraintStart_toStartOf="@+id/ivBreedImage"
        app:layout_constraintTop_toBottomOf="@+id/tvBreedLifSpan" />

    <TextView
        android:id="@+id/tvBreedWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="230dp"
        android:text="@string/breed_info_text_weight"
        app:layout_constraintStart_toStartOf="@+id/ivBreedImage"
        app:layout_constraintTop_toBottomOf="@+id/tvBreedHeight" />

    <ProgressBar
        android:id="@+id/pbDogInfo"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>