<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePageFragments.ProfileFragment"
    android:id="@+id/fragment_profile">


    <ImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_image_bg"
        android:contentDescription="@string/profile_image_content_description"
        android:maxWidth="150sp"
        android:maxHeight="150sp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profile_user_name"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxWidth="190dp"
        android:text="@string/profile_user_description_text"
        app:layout_constraintEnd_toStartOf="@+id/imgProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvNumOfPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/profile_posts_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEditProfile"
        app:layout_constraintEnd_toStartOf="@+id/imgProfileImage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_num_of_posts_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNumOfPosts"
        app:layout_constraintEnd_toStartOf="@+id/imgProfileImage"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/profile_edit_profile_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfileImage"
        app:layout_constraintWidth_max="320sp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlFeed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditProfile">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProfilePosts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
        />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/pbProfileFeed"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>